latency-tracing/2-alb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleetman-webapp-ingress
  namespace: default
  annotations:
  # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/tasks/ssl_redirect/
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: cloudgeeksca
    alb.ingress.kubernetes.io/group.order: '1'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:928095984044:certificate/6d236535-b2b0-475c-a17f-25984c9bae33
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/load-balancer-name: cloudgeeks-alb
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200,302'
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=false

spec:
  ingressClassName: alb
  rules:
  - host: webapp.cmcloudlab760.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fleetman-webapp
            port:
              number: 80
